--- a/tutorial/config.json
+++ b/tutorial/config.json
@@ -1,6 +1,6 @@
 {
-    "title": "Learn You king-tut For Much Win",
-    "repo": "<your GitHub username>/<GitHub repo name>",
-    "description": "Thanks for writing a tutorial with Viewsaurus! This example tutorial will show you the basic functionality of Viewsaurus. Click the \"Start\" button below to see how Viewsaurus works.",
+    "title": "King Tut - The tutorial about how to create tutorials",
+    "repo": "ringcentral-tutorials/king-tut-nodejs-demo",
+    "description": "Need to know how to create a tutorial for RingCentral Tutorials? This example tutorial will show you the ropes of this procedure. Click the \"Start\" button below to learn how to become a RingCentral Tutorials King!",
     "heroku": false
 }
